[package]
name = "datastruct-rs"
repository = "https://github.com/elforjani13/datastruct/"
author =  ["elforjani"]
description = "DataStruct simplifies handling binary data and JSON with a unified interface."
version = "0.1.0"
keywords = ["datastruct-rs", "json", "binary", "data-structures", "serialization"]
categories = ["data-structures", "encoding", "parsing"]
license = "MIT"
edition = "2021"

[dependencies]
serde = {version = "1.0.204" ,features = ["derive"]}
serde_json = "1.0.120"
anyhow = "1.0.86"
base64 = "0.22.1"
nom = "7.1.3"
